# havoc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
havoc/: hardware-interface.cpp  hardware-interface.h  havoc.h  main.cpp  profile-interface.cpp  profile-interface.h  raii-libusb.cpp  raii-libusb.h
havoc.xcodeproj/: project.pbxproj
havoc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: CMakeLists.txt  hardware-interface.cpp  hardware-interface.h  havoc.h  main.cpp  profile-interface.cpp  profile-interface.h  raii-libusb.cpp  raii-libusb.h
